--- a/IS403P1/Views/Home/About.cshtml
+++ b/IS403P1/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About us";
 }
+<img src="~/Content/Image/Green Dragons.JPG" height="70"/>
+
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<div style="background-color:forestgreen;color:white;padding:10px;">
+    <p>
+        We have been helping the missionaries for the last 100 years. <br />
+        Most missionaries just finished high school. These young men and young women don't know <br />
+        what it is like to be independent. You might worry about child, but don't you worry about it.<br />
+        We know what we need to do to protect these missionaries. We will take care of everything for<br />
+        18 or 24 months. Just trust us.
+    </p>
+</div>
