--- a/IS403P1/Views/Action/Asked.cshtml
+++ b/IS403P1/Views/Action/Asked.cshtml
@@ -12,6 +12,8 @@
             <h4>Dominant Religion: @ViewBag.Religion</h4>
             <h4>@ViewBag.Flag</h4>
 
+<p>Let's test this shiz!</p>
+
 <h3>How hard was it to learn Spanish?</h3>
 <p>It is definitely hard to pick up at first, but you can get it with practice. Take advantage of the time you get for language study, and try to speak Spanish as much as possible. Don't be afraid to ask questions throughout the day about words you don't know.</p>
 <h3>How do you get along with your companion?</h3>
