--- a/IS403P1/Views/Action/Asked.cshtml
+++ b/IS403P1/Views/Action/Asked.cshtml
@@ -4,13 +4,14 @@
 }
 
 <h1>Learn from missionaries that have served in your mission!</h1>
+<img src="@Url.Content(ViewBag.Flag)" style="width:50%" />
             <h2><b>President @ViewBag.President</b> welcomes you to the <b>@ViewBag.Mission Mission</b>!</h2>
 <h3>Fun facts about the mission:</h3>
             <h4>Address: @ViewBag.Address</h4>
             <h4>Language: @ViewBag.Language</h4>
             <h4>Climate: @ViewBag.Climate</h4>
             <h4>Dominant Religion: @ViewBag.Religion</h4>
-            <h4>@ViewBag.Flag</h4>
+            
 
 <p>Let's test this shiz!</p>
 
