--- a/IS403P1/Content/bootstrap.css
+++ b/IS403P1/Content/bootstrap.css
@@ -4928,18 +4928,19 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
-  padding: 30px;
-  margin-bottom: 30px;
-  font-size: 21px;
-  font-weight: 200;
-  line-height: 2.1428571435;
-  color: inherit;
-  background-color: #eeeeee;
+    padding: 30px;
+    margin-bottom: 30px;
+    font-size: 21px;
+    font-weight: 200;
+    line-height: 2.1428571435;
+    color: inherit;
+    background-color: #eeeeee;
 }
 
 .landingjumbotron {
     background-image: url('Images/il_fullxfull.797003621_j1iw.jpg');
     min-height: 750px;
+    background-size: cover;
 }
 
 .jumbotron h1 {
