--- a/IS403P1/Views/Home/Index.cshtml
+++ b/IS403P1/Views/Home/Index.cshtml
@@ -2,45 +2,39 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class=“landingjumbotron”>
+<div class="landingjumbotron">
 
 </div>
 
-<div class=“row”>
-    <div class="col-med-3 text-center">
+<div class="row">
+    <div class="col-md-3 text-center">
         <h2>Faith</h2>
         <p>
-           
             <img class="img-circle img-responsive" src="~/Content/Images/scripture_study.jpg" />
         </p>
-
     </div>
-    <div class="col-med-3 text-center">
+    <div class="col-md-3 text-center">
         <h2>Hope</h2>
         <p>
-
             <img class="img-circle img-responsive" src="~/Content/Images/scripture_study.jpg" />
         </p>
-
     </div>
-    <div class="col-med-3  text-center">
+    <div class="col-md-3  text-center">
         <h2>Charity</h2>
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/scripture_study.jpg" />
         </p>
-
     </div>
-    <div class="col-med-3 text-center">
+    <div class="col-md-3 text-center">
         <h2>Love</h2>
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/scripture_study.jpg" />
         </p>
-
     </div>
 </div>
 
-<div class=“contianer”>
-    <div class=“row”>
+<div class="contianer">
+    <div class="row">
         <div class="col-med-12 text-center">
 
         </div>
