--- a/IS403P1/Views/Home/Index.cshtml
+++ b/IS403P1/Views/Home/Index.cshtml
@@ -16,19 +16,19 @@
     <div class="col-md-3 text-center">
         <h2>Hope</h2>
         <p>
-            <img class="img-circle img-responsive" src="~/Content/Images/scripture_study.jpg" />
+            <img class="img-circle img-responsive" src="~/Content/Images/christus_statue_temple_square_salt_lake_city.jpg" />
         </p>
     </div>
     <div class="col-md-3  text-center">
         <h2>Charity</h2>
         <p>
-            <img class="img-circle & img-responsive" src="~/Content/Images/scripture_study.jpg" />
+            <img class="img-circle & img-responsive" src="~/Content/Images/jesus_charity.jpg" />
         </p>
     </div>
     <div class="col-md-3 text-center">
         <h2>Love</h2>
         <p>
-            <img class="img-circle & img-responsive" src="~/Content/Images/scripture_study.jpg" />
+            <img class="img-circle & img-responsive" src="~/Content/Images/jesus_love.jpg" />
         </p>
     </div>
 </div>
@@ -36,7 +36,7 @@
 <div class="contianer">
     <div class="row">
         <div class="col-med-12 text-center">
-
+            @Html.ActionLink("Learn More!", "Index", "Action", null, new { @class  = "btn btn-primary btn-lg" })
         </div>
     </div>
 </div>
