--- a/IS403P1/Views/Action/Asked.cshtml
+++ b/IS403P1/Views/Action/Asked.cshtml
@@ -7,7 +7,7 @@
 <img src="@Url.Content(ViewBag.Flag)" style="width:100%" />
             <center><h1 style="font-family:GoodDog"><b>President @ViewBag.President</b> welcomes you to the <b>@ViewBag.Mission Mission</b>!</h1></center>
 
-<br /><h2 style="font-family:GoodDog">Fun facts about the mission:</h2>
+<br /><br /><h2 style="font-family:GoodDog">Fun facts about the mission:</h2>
             <h4>Address: @ViewBag.Address</h4>
             <h4>Language: @ViewBag.Language</h4>
             <h4>Climate: @ViewBag.Climate</h4>
