fonts on all pages

--- a/IS403P1/Views/Action/Index.cshtml
+++ b/IS403P1/Views/Action/Index.cshtml
@@ -4,10 +4,10 @@
 }
 
 <div class="container">
-    <h2>Ask the Missionaries!</h2>
+    <h1 style="font-family:GoodDog">Ask the Missionaries!</h1>
     <p>Here's your opportunity to ask returned missionaries questions about the mission field.</p>
     <div class="dropdown">
-        <button class="btn btn-danger dropdown-toggle" type="button" data-toggle="dropdown">
+        <button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
             Select a Mission
             <span class="caret"></span>
         </button>
