--- a/IS403P1/Views/Home/Index.cshtml
+++ b/IS403P1/Views/Home/Index.cshtml
@@ -8,25 +8,25 @@
 
 <div class="row">
     <div class="col-md-3 text-center">
-        <h2>Faith</h2>
+        <h1 style="font-family:GoodDog">Faith</h1>
         <p>
             <img class="img-circle img-responsive" src="~/Content/Images/scripture_study.jpg" />
         </p>
     </div>
     <div class="col-md-3 text-center">
-        <h2>Hope</h2>
+        <h1 style="font-family:GoodDog">Hope</h1>
         <p>
             <img class="img-circle img-responsive" src="~/Content/Images/christus_statue_temple_square_salt_lake_city.jpg" />
         </p>
     </div>
     <div class="col-md-3  text-center">
-        <h2>Charity</h2>
+        <h1 style="font-family:GoodDog">Charity</h1>
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/jesus_charity.jpg" />
         </p>
     </div>
     <div class="col-md-3 text-center">
-        <h2>Love</h2>
+        <h1 style="font-family:GoodDog">Love</h1>
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/jesus_love.jpg" />
         </p>
@@ -36,7 +36,7 @@
 <div class="contianer">
     <div class="row">
         <div class="col-med-12 text-center">
-            @Html.ActionLink("Learn More!", "Index", "Action", null, new { @class  = "btn btn-primary btn-lg" })
+            @Html.ActionLink("Learn More!", "Index", "Action", null, new { @class  = "btn btn-success btn-lg" })
         </div>
     </div>
 </div>
