--- a/IS403P1/Views/Home/Contact.cshtml
+++ b/IS403P1/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h2>Company Information</h2><br />
+        <h1 style="font-family:GoodDog">Our Information:</h1><br />
         <h4>Phone:</h4>
         <p>(801) 123-4567</p>
         <h4>Email:</h4>
@@ -13,7 +13,7 @@
     <div class="col-md-6">
         @using (Html.BeginForm("Sign_in", "Home", FormMethod.Post, new { @class = "form-signin" }))
         {
-            <h2>Your Information</h2><br />
+            <h1 style="font-family:GoodDog">Your Information:</h1><br />
             <label for="inputFirstName" class="sr-only">First Name</label>
             @Html.TextBox("First Name", "", new { type = "firstname", id = "inputFirstName", @class = "form-control", placeholder = "First Name", required = true, autofocus = true })<br />
             <label for="inputLastName" class="sr-only">Last Name</label>
@@ -28,7 +28,7 @@
             </select><br /><br />
             <textarea name="message" rows="10" cols="50" placeholder="Input Message Here"></textarea><br />
             <br />
-            <button class="btn btn-lg btn-primary" type="reset">Submit</button>
+            <button class="btn btn-lg btn-success" type="reset">Submit</button>
         }
     </div>
 </div>
