--- a/IS403P1/Views/Home/About.cshtml
+++ b/IS403P1/Views/Home/About.cshtml
@@ -4,9 +4,9 @@
 <center>
     <img src="~/Content/Image/Green Dragons.JPG" height="70" />
 
-    <h1 style="font-family:GoodDog; display:inline">@ViewBag.Message</h1>
+    <h1 class="fontchange" style="display:inline">@ViewBag.Message</h1>
 </center>
-<h2 style="font-family:GoodDog">@ViewBag.Title:</h2>
+<h2 class="fontchange">@ViewBag.Title:</h2>
 
 
 <div style="background-color:forestgreen;color:white;padding:10px;">
