--- a/IS403P1/Views/Home/Index.cshtml
+++ b/IS403P1/Views/Home/Index.cshtml
@@ -8,25 +8,25 @@
 
 <div class="row">
     <div class="col-md-3 text-center">
-        <h1 style="font-family:GoodDog">Faith</h1>
+        <h1 class="fontchange">Faith</h1>
         <p>
             <img class="img-circle img-responsive" src="~/Content/Images/scripture_study.jpg" />
         </p>
     </div>
     <div class="col-md-3 text-center">
-        <h1 style="font-family:GoodDog">Hope</h1>
+        <h1 class="fontchange">Hope</h1>
         <p>
             <img class="img-circle img-responsive" src="~/Content/Images/christus_statue_temple_square_salt_lake_city.jpg" />
         </p>
     </div>
     <div class="col-md-3  text-center">
-        <h1 style="font-family:GoodDog">Charity</h1>
+        <h1 class="fontchange">Charity</h1>
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/jesus_charity.jpg" />
         </p>
     </div>
     <div class="col-md-3 text-center">
-        <h1 style="font-family:GoodDog">Love</h1>
+        <h1 class="fontchange">Love</h1>
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/jesus_love.jpg" />
         </p>
