--- a/IS403P1/Views/Action/Index.cshtml
+++ b/IS403P1/Views/Action/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <h1 style="font-family:GoodDog">Ask the Missionaries!</h1>
+    <h1 class="fontchange">Ask the Missionaries!</h1>
     <p>Here's your opportunity to ask returned missionaries questions about the mission field.</p>
     <div class="dropdown">
         <button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
