--- a/IS403P1/Views/Home/Contact.cshtml
+++ b/IS403P1/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h1 style="font-family:GoodDog">Our Information:</h1><br />
+        <h1 class="fontchange">Our Information:</h1><br />
         <h4>Phone:</h4>
         <p>(801) 123-4567</p>
         <h4>Email:</h4>
@@ -13,7 +13,7 @@
     <div class="col-md-6">
         @using (Html.BeginForm("Sign_in", "Home", FormMethod.Post, new { @class = "form-signin" }))
         {
-            <h1 style="font-family:GoodDog">Your Information:</h1><br />
+            <h1 class="fontchange">Your Information:</h1><br />
             <label for="inputFirstName" class="sr-only">First Name</label>
             @Html.TextBox("First Name", "", new { type = "firstname", id = "inputFirstName", @class = "form-control", placeholder = "First Name", required = true, autofocus = true })<br />
             <label for="inputLastName" class="sr-only">Last Name</label>
