--- a/IS403P1/Views/Home/Index.cshtml
+++ b/IS403P1/Views/Home/Index.cshtml
@@ -3,7 +3,15 @@
 }
 
 <div class="landingjumbotron">
+    
+</div>
 
+<div class="contianer">
+    <div class="row">
+        <div class="col-med-12 text-center">
+            <br />@Html.ActionLink("Learn More!", "Index", "Action", null, new { @class = "btn btn-success btn-lg" })
+        </div>
+    </div>
 </div>
 
 <div class="row">
@@ -22,7 +30,7 @@
     <div class="col-md-3  text-center">
         <h1 class="fontchange">Charity</h1>
         <p>
-            <img class="img-circle & img-responsive" src="~/Content/Images/jesus_charity.jpg" />
+            <img class="img-circle & img-responsive" src="~/Content/Images/charity.jpg" />
         </p>
     </div>
     <div class="col-md-3 text-center">
@@ -30,13 +38,5 @@
         <p>
             <img class="img-circle & img-responsive" src="~/Content/Images/jesus_love.jpg" />
         </p>
-    </div>
-</div>
-
-<div class="contianer">
-    <div class="row">
-        <div class="col-med-12 text-center">
-            @Html.ActionLink("Learn More!", "Index", "Action", null, new { @class  = "btn btn-success btn-lg" })
-        </div>
     </div>
 </div>
