--- a/IS403P1/Views/Home/About.cshtml
+++ b/IS403P1/Views/Home/About.cshtml
@@ -2,21 +2,24 @@
     ViewBag.Title = "About us";
 }
 <center>
-    <img src="~/Content/Image/Green Dragons.JPG" height="70" />
+    <img src="~/Content/Images/Green Dragons.JPG" height="70" />
 
     <h1 class="fontchange" style="display:inline">@ViewBag.Message</h1>
 </center>
 <h2 class="fontchange">@ViewBag.Title:</h2>
 
-
-<div style="background-color:forestgreen;color:white;padding:10px;">
-    <p>
-        We have been helping the missionaries for the last 100 years. <br />
-        Most missionaries have just finished high school. <br />
-        These young men and young women don't know what it is like to be independent. <br />
-        You might worry about your child, but you don't need to.<br />
-        We know what we need to do to help these missionaries. <br />
-        We will take care of everything for 18 or 24 months. <br />
-        Just trust us.
-    </p>
+<div class="row">
+    <div class="col-md-6">
+        <div style="background: linear-gradient(to right, #006600 0%, #33cc33 100%); color:white; padding:10px;">
+            <p>
+                We have been helping the missionaries for the last 100 years. <br />
+                Most missionaries have just finished high school. <br />
+                These young men and young women don't know what it is like to be independent. <br />
+                You might worry about your child, but you don't need to.<br />
+                We know what we need to do to help these missionaries. <br />
+                We will take care of everything for 18 or 24 months. <br />
+                Just trust us.
+            </p>
+        </div>
+    </div>
 </div>
