--- a/IS403P1/Views/Home/Contact.cshtml
+++ b/IS403P1/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h1 class="fontchange">Our Information:</h1><br />
+        <h1 class="fontchange">Our Information:</h1>
         <h4>Phone:</h4>
         <p>(801) 123-4567</p>
         <h4>Email:</h4>
